# deep-learning-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
notes/: 01-linear-regression.ipynb  02-logistic-regression.ipynb  03-MNIST-MLP.ipynb  04-MNIST-CNN.ipynb
src/nn/: __init__.py
src/nn/activations/: __init__.py  relu.py  sigmoid.py  tanh.py
src/nn/core/: __init__.py  layer.py  loss.py  model.py  optim.py  param.py  tensor.py
src/nn/layers/: __init__.py  conv.py  flatten.py  linear.py  pooling.py  softmax.py
src/nn/losses/: __init__.py  cross_entropy.py
src/nn/optim/: __init__.py  adam.py  momentem_sgd.py  rms_prop.py  sgd.py
src/nn/utils/: __init__.py  initializers.py
