[project]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "ucimlrepo>=0.0.7",
]
